Eating functionality programmed

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,14 +10,14 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-640
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Enemy.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,7 +25,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Scenes.tscn", "res://src/Scenes/Amoeba.tscn")
+open_scenes=PackedStringArray("res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Scenes.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy.tscn")
 current_scene="res://src/Scenes/Scenes.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=1
@@ -34,9 +34,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Amoeba.gd"]
-selected_script="res://src/Scripts/Amoeba.gd"
-open_help=["@GlobalScope", "Input"]
+open_scripts=["res://src/Scripts/Amoeba.gd", "res://src/Scripts/Enemy.gd"]
+selected_script="res://src/Scripts/Enemy.gd"
+open_help=["@GlobalScope", "float", "Input"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
