--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,6 +3,24 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 9,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 29.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 36,
+"selection_to_column": 9,
+"selection_to_line": 36,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/Scripts/Enemy.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
