--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"Amoeba",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Amoeba.gd"
+}, {
+"base": &"Node2D",
+"class": &"Enemy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Enemy.gd"
+}])
