--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-640
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -28,15 +28,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Scenes.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy.tscn")
 current_scene="res://src/Scenes/Scenes.tscn"
 center_split_offset=-288
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://src/Scripts/Amoeba.gd", "res://src/Scripts/Enemy.gd"]
-selected_script="res://src/Scripts/Enemy.gd"
-open_help=["@GlobalScope", "float", "Input"]
+selected_script="res://src/Scripts/Amoeba.gd"
+open_help=["@GlobalScope", "float", "Input", "Tween"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
