--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 29.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 36,
-"selection_to_column": 9,
-"selection_to_line": 36,
+"row": 21,
+"scroll_position": 7.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
