--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,8 +5,8 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/Scripts/Amoeba.gd"
 }, {
-"base": &"Node2D",
-"class": &"Enemy",
+"base": &"CharacterBody2D",
+"class": &"Cell",
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/Enemy.gd"
