Refactored Enemy Code

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -10,4 +10,16 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/Enemy.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/States/State.gd"
+}, {
+"base": &"Node2D",
+"class": &"StateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/States/StateMachine.gd"
 }])
