--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/TestLevel.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Scripts/", "res://src/Scenes/", "res://src/Scenes/Enemy/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scenes/", "res://src/Scenes/Enemy/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Scenes.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Watcher.tscn")
+open_scenes=PackedStringArray("res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Scenes.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn")
 current_scene="res://src/Scenes/Scenes.tscn"
 center_split_offset=-288
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Amoeba.gd", "res://src/Scripts/Enemy.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Watcher.gd"]
-selected_script="res://src/Scripts/Watcher.gd"
-open_help=["@GlobalScope", "float", "Input", "Signal", "Tween"]
+open_scripts=["res://src/Scripts/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Enemy.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Sight.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/States/StateMachine.gd", "res://src/Scripts/Watcher.gd"]
+selected_script="res://src/Scripts/Enemy.gd"
+open_help=["Tween"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
