--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,7 +11,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/Scripts/Enemy.gd"
 }, {
-"base": &"Node",
+"base": &"Node2D",
 "class": &"State",
 "icon": "",
 "language": &"GDScript",
