Tweaked player controls

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,23 +10,23 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-327
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Enemy/Fleer.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scenes/", "res://src/Scenes/Enemy/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/Singleton/", "res://src/Scenes/", "res://src/Scenes/Enemy/", "res://src/Assets/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Sight.tscn", "res://src/Scenes/TestScene/FleerTest.tscn")
-current_scene="res://src/Scenes/TestLevel.tscn"
+open_scenes=PackedStringArray("res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Sight.tscn", "res://src/Scenes/TestScene/FleerTest.tscn", "res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Enemy/Fleer.tscn")
+current_scene="res://src/Scenes/TestScene/FleerTest.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -35,8 +35,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://src/Scripts/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Enemy.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Sight.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/States/StateMachine.gd", "res://src/Scripts/Watcher.gd"]
-selected_script="res://src/Scripts/Sight.gd"
-open_help=["Tween"]
+selected_script="res://src/Scripts/Amoeba.gd"
+open_help=["Camera2D", "Tween", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
