New poison enemy

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,30 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/Scripts/Enemy.gd"
 }, {
+"base": &"Resource",
+"class": &"Effect",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Effects/Effect.gd"
+}, {
+"base": &"Effect",
+"class": &"GrowEffect",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Effects/GrowEffect.gd"
+}, {
+"base": &"Effect",
+"class": &"PoisonEffect",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Effects/PoisonEffect.gd"
+}, {
+"base": &"Timer",
+"class": &"PoisonTimer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/PoisonTimer.gd"
+}, {
 "base": &"Node2D",
 "class": &"State",
 "icon": "",
