Added Splitter type

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,17 +5,35 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/Scripts/Amoeba.gd"
 }, {
+"base": &"State",
+"class": &"AttackingState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/States/AttackingState.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Cell",
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/Enemy.gd"
 }, {
+"base": &"State",
+"class": &"DeathState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/States/DeathState.gd"
+}, {
 "base": &"Resource",
 "class": &"Effect",
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/Effects/Effect.gd"
+}, {
+"base": &"State",
+"class": &"FleeingState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/States/FleeingState.gd"
 }, {
 "base": &"Effect",
 "class": &"GrowEffect",
@@ -34,6 +52,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/PoisonTimer.gd"
+}, {
+"base": &"State",
+"class": &"RoamingState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/States/RoamingState.gd"
 }, {
 "base": &"Node2D",
 "class": &"State",
