--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 65.0,
+"row": 12,
+"scroll_position": 67.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 13.0,
+"row": 35,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -34,7 +34,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,10 +73,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 33,
 "scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -87,16 +87,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 96,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"row": 22,
+"scroll_position": 7.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 4,
-"selection_to_column": 29,
-"selection_to_line": 4,
+"selection_from_column": 21,
+"selection_from_line": 22,
+"selection_to_column": 96,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
@@ -105,10 +105,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -122,9 +122,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 25,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,12 +137,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
+"row": 14,
 "scroll_position": 9.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 14,
+"selection_to_column": 36,
+"selection_to_line": 18,
 "syntax_highlighter": "GDScript"
 }
 
@@ -150,9 +158,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 23,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
 
@@ -178,7 +190,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -189,10 +201,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -207,6 +219,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/Scripts/States/SplitState.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
