--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Enemy/Splitter.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Enemy/Fleer.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scripts/Effects/", "res://src/Scenes/", "res://src/Scenes/TestScene/", "res://src/Scenes/Enemy/", "res://src/Assets/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Sight.tscn", "res://src/Scenes/TestScene/FleerTest.tscn", "res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Poisoner.tscn", "res://src/Scenes/PoisonTimer.tscn", "res://src/Scenes/TestScene/PoisonTest.tscn", "res://src/Scenes/Enemy/Splitter.tscn")
-current_scene="res://src/Scenes/TestScene/PoisonTest.tscn"
+open_scenes=PackedStringArray("res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Sight.tscn", "res://src/Scenes/TestScene/FleerTest.tscn", "res://src/Scenes/TestLevel.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Poisoner.tscn", "res://src/Scenes/PoisonTimer.tscn", "res://src/Scenes/TestScene/PoisonTest.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/Enemy/Spawner.tscn")
+current_scene="res://src/Scenes/Enemy/Spawner.tscn"
 center_split_offset=-288
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Enemy.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/States/StateMachine.gd"]
-selected_script="res://src/Scripts/States/SplitState.gd"
+open_scripts=["res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Enemy.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Sight.gd", "res://src/Scripts/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/States/StateMachine.gd", "res://src/Scripts/Watcher.gd"]
+selected_script="res://src/Scripts/Enemy.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
