--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 33,
-"scroll_position": 14.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 18,
 "scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 16,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -169,10 +169,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -187,7 +187,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 6.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +211,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 67.0,
+"row": 30,
+"scroll_position": 72.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -225,11 +225,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 24.0,
+"row": 30,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -243,6 +243,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/Scripts/Camera.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 10,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 13.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/Scripts/Blood.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
