Refactored growth and damage

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -15,7 +15,7 @@ list=Array[Dictionary]([{
 "class": &"Cell",
 "icon": "",
 "language": &"GDScript",
-"path": "res://src/Scripts/Cells/Enemy.gd"
+"path": "res://src/Scripts/Cells/Cell.gd"
 }, {
 "base": &"State",
 "class": &"DeathState",
@@ -40,6 +40,24 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/Effects/GrowEffect.gd"
+}, {
+"base": &"Node2D",
+"class": &"Growth",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Components/Growth.gd"
+}, {
+"base": &"Area2D",
+"class": &"Hurtbox",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Components/Hurtbox.gd"
+}, {
+"base": &"Timer",
+"class": &"Invincibility",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Components/Invincibility.gd"
 }, {
 "base": &"Effect",
 "class": &"PoisonEffect",
