--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Enemy/Spawner.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Shaders/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scripts/Components/", "res://src/Scripts/Cells/", "res://src/Scenes/", "res://src/Scenes/Enemy/", "res://src/Assets/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/TestScene/TestLevel.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Shaders/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scripts/Components/", "res://src/Scripts/Cells/", "res://src/Scenes/", "res://src/Scenes/TestScene/", "res://src/Scenes/Levels/", "res://src/Scenes/Enemy/", "res://src/Scenes/Components/", "res://src/Assets/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/Enemy/Poisoner.tscn", "res://src/Scenes/TestScene/PoisonTest.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Blood.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/States/State.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Spawner.tscn", "res://src/Scenes/Enemy/Splitter.tscn")
-current_scene="res://src/Scenes/Enemy/Spawner.tscn"
+open_scenes=PackedStringArray("res://src/Scenes/TestScene/TestLevel.tscn")
+current_scene="res://src/Scenes/TestScene/TestLevel.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -34,9 +34,9 @@ selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/Blood.gd", "res://src/Scripts/Camera.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Cells/Enemy.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/Cells/Watcher.gd"]
-selected_script="res://src/Scripts/States/RoamingState.gd"
-open_help=["CanvasItem", "Color"]
+open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Cells/Watcher.gd"]
+selected_script="res://src/Scripts/Components/Hurtbox.gd"
+open_help=["PropertyTweener"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
