--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Node2D",
+"class": &"Ability",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Abilities/Ability.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Amoeba",
 "icon": "",
@@ -10,6 +16,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/Scripts/States/AttackingState.gd"
+}, {
+"base": &"Ability",
+"class": &"BoostAbility",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Abilities/BoostAbility.gd"
 }, {
 "base": &"CharacterBody2D",
 "class": &"Cell",
