Created level generation

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -89,6 +89,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/Scripts/States/RoamingState.gd"
 }, {
+"base": &"Resource",
+"class": &"SpawnData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/LevelGeneration/SpawnData.gd"
+}, {
 "base": &"Node2D",
 "class": &"State",
 "icon": "",
