--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=530
 dock_hsplit_3=-326
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Trail/Trail.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Shaders/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scenes/", "res://src/Scenes/Trail/", "res://src/Scenes/TestScene/", "res://src/Scenes/Levels/", "res://src/Resources/", "res://src/Assets/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Abilities/BoostAbility.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scripts/LevelGeneration/", "res://src/Scenes/", "res://src/Scenes/Enemy/", "res://src/Scenes/Components/", "res://src/Scenes/Abilities/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/Cells/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/TestScene/TestLevel.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Grower.tscn", "res://src/Scenes/Enemy/Poisoner.tscn", "res://src/Scenes/Enemy/Spawner.tscn", "res://src/Scenes/Abilities/Ability.tscn", "res://src/Scenes/Abilities/BoostAbility.tscn", "res://src/Scenes/Trail/Trail.tscn")
-current_scene="res://src/Scenes/TestScene/TestLevel.tscn"
+open_scenes=PackedStringArray("res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Chaser.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Enemy/Spawner.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/Components/Hurtbox.tscn", "res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/TestScene/PoisonTest.tscn", "res://src/Scenes/TestScene/FleerTest.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Trail/Trail.tscn", "res://src/Scenes/Components/SpawnTimer.tscn", "res://src/Scenes/Components/Invincibility.tscn", "res://src/Scenes/Abilities/BoostAbility.tscn")
+current_scene="res://src/Scenes/Levels/Level.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Abilities/Ability.gd", "res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Trail/Trail.gd"]
-selected_script="res://src/Scripts/Abilities/BoostAbility.gd"
-open_help=["Node", "SceneTree", "Timer", "Vector2"]
+open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Scripts/Cells/Watcher.gd"]
+selected_script="res://src/Scripts/Level.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=0.928571
