Added dynamic sprite system

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -95,6 +95,18 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://src/Scripts/LevelGeneration/SpawnData.gd"
 }, {
+"base": &"Resource",
+"class": &"Stage",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Cells/Stage.gd"
+}, {
+"base": &"Node2D",
+"class": &"Stages",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/Scripts/Cells/Stages.gd"
+}, {
 "base": &"Node2D",
 "class": &"State",
 "icon": "",
