Got death and win animations working

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,40 +10,40 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=261
-dock_hsplit_3=-508
+dock_hsplit_3=-495
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/Shaders/PaletteMaterial.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/Singleton/", "res://src/Shaders/", "res://src/Scripts/", "res://src/Scripts/States/", "res://src/Scripts/LevelGeneration/", "res://src/Scripts/Effects/", "res://src/Scripts/Components/", "res://src/Scripts/Cells/", "res://src/Scenes/", "res://src/Scenes/Levels/", "res://src/Scenes/Enemy/", "res://src/Scenes/Cutscenes/", "res://src/Assets/", "res://src/Assets/Art/", "res://src/Assets/Art/Petra/", "res://src/Assets/Art/DialogueBox/", "res://src/Assets/Art/Cells/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/Scenes/Levels/Level1.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/Scenes/", "res://src/Scenes/Levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Grower.tscn", "res://src/Scenes/Enemy/Stages.tscn", "res://src/Scenes/Enemy/Poisoner.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Chaser.tscn")
-current_scene="res://src/Scenes/Levels/Level1.tscn"
+open_scenes=PackedStringArray("res://src/Scenes/Levels/Level1.tscn", "res://src/Scenes/Levels/Level.tscn", "res://src/Scenes/Camera.tscn", "res://src/Scenes/NextLevelScreen.tscn", "res://src/Scenes/Transitions/Transition.tscn", "res://src/Scenes/Amoeba.tscn", "res://src/Scenes/Enemy/Cell.tscn", "res://src/Scenes/Enemy/Fleer.tscn", "res://src/Scenes/Enemy/Grower.tscn", "res://src/Scenes/Enemy/Splitter.tscn", "res://src/Scenes/GameOverScreen.tscn")
+current_scene="res://src/Scenes/Levels/Level.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Button.gd", "res://src/Scripts/Camera.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/Cutscene.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Dialogue.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Growth.gd", "res://src/Scenes/UI/GrowthLeft.gd", "res://src/Scenes/UI/GrowthText.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Cells/Stage.gd", "res://src/Scripts/Cells/Stages.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/TextBox.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Scripts/Cells/Watcher.gd"]
+open_scripts=["res://src/Scripts/Cells/Amoeba.gd", "res://src/Scripts/States/AttackingState.gd", "res://src/Scripts/Abilities/BoostAbility.gd", "res://src/Scripts/Button.gd", "res://src/Scripts/Camera.gd", "res://src/Scripts/Cells/Cell.gd", "res://src/Scripts/Cutscene.gd", "res://src/Scripts/States/DeathState.gd", "res://src/Scripts/Dialogue.gd", "res://src/Scripts/States/FleeingState.gd", "res://src/Scripts/GameOverScreen.gd", "res://src/Singleton/Global.gd", "res://src/Scripts/Components/Growth.gd", "res://src/Scenes/UI/GrowthLeft.gd", "res://src/Scenes/UI/GrowthText.gd", "res://src/Scripts/Components/Hurtbox.gd", "res://src/Scripts/Components/Invincibility.gd", "res://src/Scripts/Level.gd", "res://src/Scripts/NextLevelScreen.gd", "res://src/Scripts/Effects/PoisonEffect.gd", "res://src/Scripts/Components/PoisonTimer.gd", "res://src/Scripts/States/RoamingState.gd", "res://src/Scripts/Components/Sight.gd", "res://src/Scripts/LevelGeneration/SpawnData.gd", "res://src/Scripts/Components/SpawnTimer.gd", "res://src/Scripts/States/SplitState.gd", "res://src/Scripts/Cells/Stage.gd", "res://src/Scripts/Cells/Stages.gd", "res://src/Scripts/States/State.gd", "res://src/Scripts/States/StateMachine.gd", "res://src/Scripts/TextBox.gd", "res://src/Scripts/Trail/Trail.gd", "res://src/Singleton/Transition.gd", "res://src/Scripts/Cells/Watcher.gd"]
 selected_script="res://src/Scripts/Level.gd"
-open_help=["@GlobalScope", "Callable", "CanvasItem", "Node", "Tween", "Vector2"]
+open_help=["@GlobalScope", "AnimationMixer", "AnimationPlayer", "Callable", "CanvasItem", "Node", "PackedScene", "Tween", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=0.928571
 
 [ShaderEditor]
 
-open_shaders=["res://src/Shaders/Vignette.gdshader", "res://src/Shaders/Blood.gdshader", "res://src/Shaders/ChromaticAberration.gdshader", "res://src/Shaders/Dash.gdshader", "res://src/Scenes/Enemy/PaletteShader.gdshader", "res://src/Scenes/Enemy/Stages.gdshader"]
+open_shaders=["res://src/Shaders/Vignette.gdshader", "res://src/Shaders/Blood.gdshader", "res://src/Shaders/ChromaticAberration.gdshader", "res://src/Shaders/Dash.gdshader", "res://src/Scenes/Enemy/PaletteShader.gdshader", "res://src/Scenes/Enemy/Stages.gdshader", "res://src/Shaders/Blur.gdshader"]
 split_offset=0
-selected_shader="res://src/Scenes/Enemy/Stages.gdshader"
+selected_shader="res://src/Shaders/ChromaticAberration.gdshader"
 text_shader_zoom_factor=1.0
